--- a/views/employees/edit.jade
+++ b/views/employees/edit.jade
@@ -1,34 +1,34 @@
 extends ../layout 
 
 block content 
+  main
+    div.container
+      if employee
+        h1 Edit Employee
+        form(action='/restaurants/' + employee.restaurant_id + '/employees/' + employee.id method='post')
+          fieldset
+            legend Edit Employee
+            p.hidden
+              input(type="text" id="restaurant_id" name='restaurant_id' value= employee.restaurant_id)
+            p
+              label(for="name") First Name
+              br
+              input(type="text" id="first_name" name='first_name' value= employee.first_name placeholder="First Name")
+            p
+              label(for="name") Last Name
+              br
+              input(type="text" id="last_name" name='last_name' value= employee.last_name placeholder="Last Name")
+            p
+              label(for="position") Position
+              br
+              select
+                option(value="manager" selected=(employee ? (employee.position === "manager" ? "selected" : undefined) : undefined)) manager
+                option(value="server" selected=(employee ? (employee.position === "server" ? "selected" : undefined) : undefined)) server
+                option(value="host" selected=(employee ? (employee.position === "host" ? "selected" : undefined) : undefined)) host
+                option(value="chef" selected=(employee ? (employee.position === "chef" ? "selected" : undefined) : undefined)) chef
+            br
+            button(type="submit") Submit
+            a(href='/restaurants/' + employee.restaurant_id ) Cancel
 
-  div.container
-    if employee
-      h1 Edit Employee
-      form(action='/restaurants/' + employee.restaurant_id + '/employees/' + employee.id method='post')
-        fieldset
-          legend Edit Employee
-          p.hidden
-            input(type="text" id="restaurant_id" name='restaurant_id' value= employee.restaurant_id)
-          p
-            label(for="name") First Name
-            br
-            input(type="text" id="first_name" name='first_name' value= employee.first_name placeholder="First Name")
-          p
-            label(for="name") Last Name
-            br
-            input(type="text" id="last_name" name='last_name' value= employee.last_name placeholder="Last Name")
-          p
-            label(for="position") Position
-            br
-            select
-              option(value="manager" selected=(employee ? (employee.position === "manager" ? "selected" : undefined) : undefined)) manager
-              option(value="server" selected=(employee ? (employee.position === "server" ? "selected" : undefined) : undefined)) server
-              option(value="host" selected=(employee ? (employee.position === "host" ? "selected" : undefined) : undefined)) host
-              option(value="chef" selected=(employee ? (employee.position === "chef" ? "selected" : undefined) : undefined)) chef
-          br
-          button(type="submit") Submit
-          a(href='/restaurants/' + employee.restaurant_id ) Cancel
-
-                  
-    
+                    
+      
