--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,18 @@ html
 
   body
     header 
-      h1 
-        a(href='/') gTables Restaurants
+      br
+      a(href='/') gTables Home 
+      ***      
+      a(href="/neighborhoods") Neighborhoods 
+      ***      
+      a(href="/neighborhoods/new") New Neighborhood 
+      ***      
+      a(href="/admin") Admin 
+      ***      
+      a(href="/restaurants/new") New Restaurant 
     block content
+
+
+
+    //- img(src="../images/star.png", alt="star") 
