--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,8 +11,8 @@ body {
 header {
    width: 100%;
    height: 75px;
-   border: 1px solid #7cc576;
-   background-color: #7cc576;
+   border: 1px solid black;
+   background-color: black;
    color: black;
    text-align: center;
 }
@@ -43,6 +43,12 @@ a {
    text-decoration: none;
    color: grey;
    font-size: 20px;
+}
+
+header a {
+   text-decoration: none;
+   color: white;
+   font-size: 25px;
 }
 
 .restaurantSquare {
