--- a/views/employees/new.jade
+++ b/views/employees/new.jade
@@ -1,32 +1,32 @@
 extends ../layout 
 
 block content 
+  main
+    div.container
+      h1 Add an Employee
+      form(action='/restaurants/' + restaurantidentification + '/employees/' method='post')
+        fieldset
+          legend Add an Employee
+          p.hidden
+            input(type="text" id="restaurant_id" name='restaurant_id' value= restaurantidentification)
+          p
+            label(for="name") First Name
+            br
+            input(type="text" id="first_name" name='first_name' placeholder="First Name")
+          p
+            label(for="name") Last Name
+            br
+            input(type="text" id="last_name" name='last_name' placeholder="Last Name")
+          p
+            label(for="position") Position
+            br
+            select(name="position" type="text" id="position")
+              option(value="manager" selected=(employee ? (employee.position === "manager" ? "selected" : undefined) : undefined)) manager
+              option(value="server" selected=(employee ? (employee.position === "server" ? "selected" : undefined) : undefined)) server
+              option(value="host" selected=(employee ? (employee.position === "host" ? "selected" : undefined) : undefined)) host
+              option(value="chef" selected=(employee ? (employee.position === "chef" ? "selected" : undefined) : undefined)) chef
+          br
+          button(type="submit") Submit
+          a(href='/restaurants/' + restaurantidentification ) Cancel
 
-  div.container
-    h1 Add an Employee
-    form(action='/restaurants/' + restaurantidentification + '/employees/' method='post')
-      fieldset
-        legend Add an Employee
-        p.hidden
-          input(type="text" id="restaurant_id" name='restaurant_id' value= restaurantidentification)
-        p
-          label(for="name") First Name
-          br
-          input(type="text" id="first_name" name='first_name' placeholder="First Name")
-        p
-          label(for="name") Last Name
-          br
-          input(type="text" id="last_name" name='last_name' placeholder="Last Name")
-        p
-          label(for="position") Position
-          br
-          select(name="position" type="text" id="position")
-            option(value="manager" selected=(employee ? (employee.position === "manager" ? "selected" : undefined) : undefined)) manager
-            option(value="server" selected=(employee ? (employee.position === "server" ? "selected" : undefined) : undefined)) server
-            option(value="host" selected=(employee ? (employee.position === "host" ? "selected" : undefined) : undefined)) host
-            option(value="chef" selected=(employee ? (employee.position === "chef" ? "selected" : undefined) : undefined)) chef
-        br
-        button(type="submit") Submit
-        a(href='/restaurants/' + restaurantidentification ) Cancel
-
-              
+                
