--- a/views/neighborhoods/index.jade
+++ b/views/neighborhoods/index.jade
@@ -1,38 +1,38 @@
 extends ../layout 
 
 block content 
-  a(href="/neighborhoods/new") Add a New Neighborhood
-  div
-    if neighborhoods
-      each neighborhood in neighborhoods
-        .showww
-          a(href="/neighborhoods/#{neighborhood.id}") 
-            h1 #{neighborhood.name}
-          div(id="map#{neighborhood.id}" style="height: 200px; width: 440px; margin: 0 auto; background-color: black; box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2)")
-          p
-            a(href="/neighborhoods/#{neighborhood.id}/edit") Edit
-            a(href="/neighborhoods/#{neighborhood.id}/delete") Delete
-  script.
-    function initMap() {
-      var thehoodz = (!{JSON.stringify(neighborhoods)});
-      var key = "&key=AIzaSyBWq3Gz3IlIWdXeKYBlNubGRBWd-ENdIno";
-      thehoodz.forEach(function(hood){
-        var hoodid = (hood.id);
-        var center = (hood.center).replace(/ /g, "+");
-        $.ajax({
-          url: 'https://maps.googleapis.com/maps/api/geocode/json?address='+center+key,
-          method: 'GET'
-        }).done(function(response){
-          var loc = response.results[0].geometry.location;
-          var latitude = (loc.lat)*1;
-          var longitude = (loc.lng)*1;
-          var map = new google.maps.Map(document.getElementById('map'+hoodid), {
-              center: {lat: latitude, lng: longitude},
-              zoom: 14
+  main
+    div
+      if neighborhoods
+        each neighborhood in neighborhoods
+          .showww
+            a(href="/neighborhoods/#{neighborhood.id}") 
+              h1 #{neighborhood.name}
+            div(id="map#{neighborhood.id}" style="height: 200px; width: 440px; margin: 0 auto; background-color: black; box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2)")
+            p
+              a(href="/neighborhoods/#{neighborhood.id}/edit") Edit
+              a(href="/neighborhoods/#{neighborhood.id}/delete") Delete
+    script.
+      function initMap() {
+        var thehoodz = (!{JSON.stringify(neighborhoods)});
+        var key = "&key=AIzaSyBWq3Gz3IlIWdXeKYBlNubGRBWd-ENdIno";
+        thehoodz.forEach(function(hood){
+          var hoodid = (hood.id);
+          var center = (hood.center).replace(/ /g, "+");
+          $.ajax({
+            url: 'https://maps.googleapis.com/maps/api/geocode/json?address='+center+key,
+            method: 'GET'
+          }).done(function(response){
+            var loc = response.results[0].geometry.location;
+            var latitude = (loc.lat)*1;
+            var longitude = (loc.lng)*1;
+            var map = new google.maps.Map(document.getElementById('map'+hoodid), {
+                center: {lat: latitude, lng: longitude},
+                zoom: 14
+            });
           });
-        });
-      })
-    }
-  script(src='https://code.jquery.com/jquery-2.2.0.min.js', type='text/javascript')
-  script(async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHjmrGEdj4v3cDILLJRlp3hzPwBJaR0zg&callback=initMap").
-    
+        })
+      }
+    script(src='https://code.jquery.com/jquery-2.2.0.min.js', type='text/javascript')
+    script(async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHjmrGEdj4v3cDILLJRlp3hzPwBJaR0zg&callback=initMap").
+      
