--- a/views/reviews/show.jade
+++ b/views/reviews/show.jade
@@ -1,12 +1,13 @@
 extends ../layout 
 
 block content 
-  if review
-    div.showww
-      h1 #{review.username} 
-      h3 #{review.comment}
-      p
-        a(href="/restaurants/#{review.restaurant_id}/reviews/#{review.id}/edit") Edit Review
-      p
-        form(action='/restaurants/#{review.restaurant_id}/reviews/#{review.id}/delete' method='post')
-          input(type='submit' value='Delete') 
+  main
+    if review
+      div.showww
+        h1 #{review.username} 
+        h3 #{review.comment}
+        p
+          a(href="/restaurants/#{review.restaurant_id}/reviews/#{review.id}/edit") Edit Review
+        p
+          form(action='/restaurants/#{review.restaurant_id}/reviews/#{review.id}/delete' method='post')
+            input(type='submit' value='Delete') 
